Fixed js blurr issue & added stabilize command

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -15,5 +15,5 @@
 }
 
 #chart-canvas {
-	height: 900px;
+	height: 1000px;
 }
